5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4328/executions/1601_2425.log
== TEST (2019-04-04 09:34:12) 
-- CODE:
distancia = d = float(input())
combustivel = l = float(input())

consumo = c = (d/l)

print(round(c,3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 09:34:49) 
-- CODE:
distancia = d = float(input())
combustivel = l = float(input())

consumo = c = (d/l)

print(round(c,3 "km/l"))
-- ERROR:
File "XXXX", line 6
    print(round(c,3 "km/l"))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 09:35:20) 
-- CODE:
distancia = d = float(input())
combustivel = l = float(input())

consumo = c = (d/l)

print(round(c,3) "km/l")
-- ERROR:
File "XXXX", line 6
    print(round(c,3) "km/l")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 09:35:57) 
-- CODE:
distancia = d = float(input())
combustivel = l = float(input())

consumo = c = (d/l)

print(round(c,3)"km/l")
-- ERROR:
File "XXXX", line 6
    print(round(c,3)"km/l")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 09:36:10) 
-- CODE:
distancia = d = float(input())
combustivel = l = float(input())

consumo = c = (d/l)

print(round(c,3)("km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(c,3)("km/l"))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:26:44) 
-- CODE:
distancia = d = float(input())
combustivel = l = float(input())

consumo = c = (d/l)

print(round(c,3))
print("km/h")
-- OUTPUT:
14.286
km/h
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 12:27:00) 
-- CODE:
distancia = d = float(input())
combustivel = l = float(input())

consumo = c = (d/l)

print(round(c,3))
print("km/h")
-- EXECUTION TIME:
0.144942
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
km/h
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
km/h
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
km/h
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:27:13) 
-- CODE:
distancia = d = float(input())
combustivel = l = float(input())

consumo = c = (d/l)

print(round(c,3)) print("km/h")
print("km/h")
-- ERROR:
File "XXXX", line 6
    print(round(c,3)) print("km/h")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:27:23) 
-- CODE:
distancia = d = float(input())
combustivel = l = float(input())

consumo = c = (d/l)

print(round(c,3)) print("km/h")

-- ERROR:
File "XXXX", line 6
    print(round(c,3)) print("km/h")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:28:26) 
-- CODE:
distancia = d = float(input())
combustivel = l = float(input())

consumo = c = (d/l)

print("km/l"round(c,3))

-- ERROR:
File "XXXX", line 6
    print("km/l"round(c,3))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:28:30) 
-- CODE:
distancia = d = float(input())
combustivel = l = float(input())

consumo = c = (d/l)

print("km/l" round(c,3))

-- ERROR:
File "XXXX", line 6
    print("km/l" round(c,3))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:28:45) 
-- CODE:
distancia = d = float(input())
combustivel = l = float(input())

consumo = c = (d/l)

print(round(c,3)"km/l")

-- ERROR:
File "XXXX", line 6
    print(round(c,3)"km/l")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:34:25) 
-- CODE:
distancia = d = float(input())
combustivel = l = float(input())

consumo = c = (d/l)

print(round(c,3) testo)

-- ERROR:
File "XXXX", line 6
    print(round(c,3) testo)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:34:31) 
-- CODE:
distancia = d = float(input())
combustivel = l = float(input())

consumo = c = (d/l)

print(round(c,3) texto)

-- ERROR:
File "XXXX", line 6
    print(round(c,3) texto)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:34:38) 
-- CODE:
distancia = d = float(input())
combustivel = l = float(input())

consumo = c = (d/l)

print(round(c,3))

-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 19:25:36) 
-- CODE:
distancia = d = float(input())
combustivel = l = float(input())

consumo = c = (d/l)

print(round(c,3)"km/l")

-- ERROR:
File "XXXX", line 6
    print(round(c,3)"km/l")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 19:25:55) 
-- CODE:
distancia = d = float(input())
combustivel = l = float(input())

consumo = c = (d/l)

print(round(c,3))

-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 19:27:08) 
-- CODE:
distancia = d = float(input())
combustivel = l = float(input())

consumo = c = (d/l)

print(round(c + "km/l",3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(c + "km/l",3))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:13:41) 
-- CODE:
distancia = float(input())
combustivel = float(input())

consumo = (distancia/combustivel)

print(round(c + "km/l",3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(c + "km/l",3))
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:13:54) 
-- CODE:
distancia = float(input())
combustivel = float(input())

consumo = (distancia/combustivel)

print(round(consumo + "km/l",3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(consumo + "km/l",3))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:14:11) 
-- CODE:
distancia = float(input())
combustivel = float(input())

consumo = (distancia/combustivel)

print(round(consumo + "km/l",3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(consumo + "km/l",3))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:16:35) 
-- CODE:
distancia = float(input())
combustivel = float(input())

consumo = (distancia/combustivel)

print(round(consumo,3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:16:48) 
-- CODE:
distancia = float(input())
combustivel = float(input())

consumo = (distancia / combustivel)

print(round(consumo,3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:16:57) 
-- CODE:
distancia = float(input())
combustivel = float(input())

consumo = (distancia / combustivel)

print(round(consumo,3))
-- EXECUTION TIME:
0.168752
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:17:23) 
-- CODE:
distancia = float(input())
combustivel = float(input())

consumo = (distancia / combustivel)

print(round(consumo,3) + "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(consumo,3) + "km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:18:19) 
-- CODE:
distancia = float(input())
combustivel = float(input())

consumo = (distancia / combustivel)

print(round(consumo,3) + km/l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(consumo,3) + km/l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:19:02) 
-- CODE:
distancia = float(input())
combustivel = float(input())

consumo = (distancia / combustivel)

print(round(consumo,3) + "km/l" * 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(consumo,3) + "km/l" * 1)
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:19:47) 
-- CODE:
distancia = float(input())
combustivel = float(input())

consumo = (distancia / combustivel)

print(round(consumo,3) + "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(consumo,3) + "km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:20:23) 
-- CODE:
distancia = float(input())
combustivel = float(input())

consumo = (distancia / combustivel)

print(round(consumo,3), "km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:20:33) 
-- CODE:
distancia = float(input())
combustivel = float(input())

consumo = (distancia / combustivel)

print(round(consumo,3), "km/l")
-- EXECUTION TIME:
0.1281
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
